improved polygon face detection

--- a/ThreeDApp2/Form1.resx
+++ b/ThreeDApp2/Form1.resx
@@ -124,70 +124,64 @@
   <data name="zoomInBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG1SURBVDhPlZFLLwNRFMeLhIVXWPAV2NlbSCx8Aj6AhUQk
-        RCIiEundkNKhDx2taRvaoarT6buoMTRebRohJWrnsZLQYkMiVK/e5jbmtonyS/6Z3HvO7+TkjqwUCqOj
-        U+cQFgyusEVt31JNLNhbcel3xqaZep1TDIpXD2/nTxCixFMZGDi9SWrtIUMPx1Xg1mIAAOV6XhTPHtM5
-        sTCx65c0GoLbi6Gs/v7j29SnVBqSzxFD0CaAsbVghWTRt++WNqN09w4T53jyC6ptWxRWSCyhWFgqorR3
-        dee+0k1oPmzBCslSIBLIN+VTtEE28+sCjRUSFRsEJ/fvhFA4QEzcvU4xjg6skAzQXI2JF5+lgjTo7+gc
-        O37cTgIAV0mZea9ViKYNvoOXwk12bx4/aG53B2hX6rDyw6BWW6VcdofWhWhmdsmzCQBdo14Jys3ZN0EP
-        y3gOXEqrt08GYRlWfhih2OqstO07OodKi0dAw3CpNAq9rUHFeg/9xxeQsrr30DBcKg2g2CYNm90xcgln
-        WW9kdMZci0t/Y8bEGzeiCahhfTEwZ2rE139n0rjaNm12msY1a8346h/IZN9VmolBtbkPOAAAAABJRU5E
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG1SURBVDhPlZFLLwNRFMeLhIVXWPAV2NlbSCx8gvoAFhKR
+        EImISMTdkNLpU4fqI7RDVcf0XW21QykqjZBWsBJWFdRjQyKUq1eudG6baP2Sfyb3nvM7ObkjKoZEb+vU
+        2EJzWnvEpLQGFONz1lZc+pvRaV29Zp338Rd3r8lHCFESD1/Qe3yVVluD2m6WrcCthQAAyuc5nj+5z/yI
+        +Ylf3GbQENxeCGX29B1cpz6E0uCEnBiCNgE6SwtWSBbcuw5hM4q4Z4g4J9KfUGkJUFghMQXjEaGI0t4l
+        /vkKN6G5iAkrJIvemPe36TcFG2QzuxaisUKiYHzg6OaNEPIH8OeXL1M6WwdWSPpptsbAhZ+EgjDo72hs
+        YQ9uJwGAraSMnEsfOsxo3dHn/E38V6l3mt0KA/VyHVZyDKjVVdIlR9Ds3fmSLTr9ANA1ymXfhDH7Juhh
+        dc6oXWp29YogLMNKjmGKqc5Km+79JJSanCE0DJeKI5m3NCgY157n4BRSZsc2GoZLxQEU06RisjvGzqCM
+        ccVGZoy1uFQaMwZOv3F4DlWMOw7khkZ8XTqT+pW2aeO6YUy12oyv/oFI9A3JT4j/wsmkiwAAAABJRU5E
         rkJggg==
 </value>
   </data>
   <data name="zoomOutBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGrSURBVDhPlZFLLwNRFMeLhIVXWPAV2PkGEp+BD2AhEQmR
-        iIhEejekj9HH6FS1ndAOVTOdvouaDo1Xm0ZICXbKSqL12JAI5ZqRWzVtKb/kv7nn/E5OzpWVQ2Ghuww0
-        ZzS5ozadc107YXS2o9LvjCnNjQYXH+LPb56O7yAUk7x9h8HDVAZ3hk09DFOFWosBAFTOsjx/lM5+ioVJ
-        XDxkxSGovRjMHujfv7x9LSXnIm4CzI42pEiZ8297Sknfk8y8QZ1jHUOKFFs4Ec01dvcOSzIk13wNIdio
-        DSlS5oOxYK7ppySFzKxwBFKkaKkQOLh+Linmwp9dPU6Z6U6kSBkgmDory9+XEsWIv2OgIwHULgUAphoj
-        WZ+di2dN/p2Hwk02U+kXgtmMAHyxASl5BnG8Rr3gCa9w8ffpee8aAESdbjEkJ4WbiIc1e3fcaruvTwZh
-        BVLyjGBUrSBt+PeOodrm5cRhqFQexayjSUv5dgP7JxCze7bEYahUHoBRLXpK2DF2CqcpX2xURdaj0t9Q
-        WVnLavwM6il/Amiszej570xaljqUpMs6rl9uRU//QCb7AON2j51jxi+4AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGqSURBVDhPlZFLLwNRFMcHCQtFWPAV2PkGEp+BD2AhEQmR
+        iIhE3A3RdvrU0WqnqelQNdPRt7baoZ6VRkiJdiWsKqjHhkSoXh25xVDKL/lv7jm/k5NzsVJMmph2HROe
+        NixFKbU9qBqdtreg0u8MS411Ogfv51OXD4c3EApJXOegb/80o7WHDJ0sW4FavwMAKNdzPH9wlX0Tvyae
+        usgKQ1D7d3Crt2fnLP1cTC5E2AQYbc1IETPj2XAWkz4nkXmBalsQR4oYKhSPFho7ugZE6R9Tvg8huCiF
+        FDEWX8xXaPopiXymFsMEUsSoaD/YO38sKhbCJ0/uJ4xMG1LE9BKshOQit8VEIcLv6JiIF7WLAYCtxM2c
+        2xTezRo8m3dfNwmcpp8IdjUCtHO1SPmgT6utks86Q1bfek5hcQUAICTqOf+YOX8T4bBG1+aS3OruxiAs
+        Q8oHgzhdnZdWPNuHUE65wsIwVCrNpN5Wr6LdW96dI4hbnWvCMFQqDcDpRg2d3zF2DBW0OzYkM9eg0t+Q
+        kZxpeTcJNbQnDpRkA3r+O+Om+Vap2UGOaBaa0NM/wLBXVzqPW7I/t0YAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="moveBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAC/SURBVDhPY8AH4rqP9IMwlEsaiOk82tuw7NnXprXPv8d1
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAC/SURBVDhPY8AH4rqP9IMwlEsaiOk82tuw9NnXprXPv8d1
         HpkCFSYOhNTtiI7rOnahZf3L/yAMYoPEoNLEgYCKLcb1q578B2EQGypMPCDZAHQn4jMAwzvxnUe647qO
         XgAphGHfyi0xMANAbGS5+O4jFxNgsRPXdaSnERjazRteghUj486t78AYXRyktnHts+/xXUcmUG4ACFDk
-        BRigKBCxAXwGEAUoMgDkRIqTMjADtcMyUzwwY0GFSQOEszMDAwAUxhXIhFG7zgAAAABJRU5ErkJggg==
+        BRigKBCxAXwGEAUoMgDkRIqTMjADtcMyUzwwY0GFSQOEszMDAwAMbBXEU46jKQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="scaleBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJVSURBVHhe7ZvBThtBDIbzEkW8IBKQ7UtUFFWBPXCrqiYr
-        9VGaUg7c4MBzcONCy87IlmYTMzh/vNnJxp/0S8wYO79NMjuHMHEcx3Gcdeppc1tXzX/W9dn8D4Ums+n8
-        Lo1Ftb9P4cHj4ec0lnpXkxaIRc6b3xRae4EYT15k8HjVLFfjFNIDJxaGD2CLASzTt/2+MpY+nIOkrhYX
-        l9X3f/w5zunbyY9nSusQH5ntU4OWOtLHTPp42TX1dPGlPmle00ZzorQOudi7hKaTwkvaLoqbz/NPs6p5
-        SHzaDaB0Os2f/Xw6qAGsNj87b44PZgBS82E/1+R1tfi78TlWyiGY8l7zgdwAIEo7BHPNB9grLcfFR80H
-        cgOA7gGloGk+kBtALlY02uYD8bLUipYdoAEMfQhu0nwg3hhb0bIDNIAhD8FNm/8I7oOWZWPdfAC6BwxB
-        H83vDUU2nx6EO9O0ebw6/XVEFkyA7wGiwZ5l3XyAa9NSDyd+vX/pXbBJBXBtTpQMWws2qQCuzYmSYWvB
-        JhXAtTlRMmwt2KQC+B4wlgHA+ABGMoCt7wGSYWv1OQC4NidKhq0Fm1QA1+ZEybC1YJMK4NqcKBm2FmxS
-        AVybEyXD1oJNKvB7AIoPYCQD8HsAWpsTJcPWgk0qgGtzomTYWrBJBXBtTpQMWws2qQCuzYmSYWvBJhX4
-        PQDFBzCSAYQ7wEF/BODanCgZtpZkUvrLafdSpNoqOHGXopeObLXXDoX3pbiKNmntvy761OpX2nmflpEN
-        9jre9/Lr8uFtHRqhZUS75ziO46iYTN4Anj9SfOg/9QcAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADWSURBVEhL7ZI7CgIxFEWzQjtL9yE2djazBQsblyCKiN2U
+        Wk4h6gIUVCxtIi+8mMxwJ8YhEXRy4TTJ5R3yEe1NPxtLm/tDKqrrmqb7rDOxy7FIYhVUjAHrTFApBqwz
+        +bk3nq73sjOYlUA9IqiYqMpRhwguzouT7A4X3xXnxVn2Riu5PV5fJ0c9IpjYluq1yXJX6thAMSq6QFIf
+        WGeCSnU0lRKsM9Efw5fN4QIHu4BXTcOy+c0L6qLB70hilSR20VRMsM7kr8Xpc6nQsE+whyHq9lnXugjx
+        BMegajVsjMS9AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="panBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKCSURBVFhH7ZfNTxNBGMarMcazevTiH+HZA6EFut3SRA96
-        NfFIjMZ4oxi+SneWJVExHrhYiSc1MR6MMSFQS3e2ipG0pVHYGsUeUNMiu6UU6ziDs2B0qra7ZSrpkzyH
-        mUnf55fd6b4zrj2l08HkQUGGYwKIFjzD8bw4ChUyR5f5qxsD9dxJmS8/lBBxTyRlEki6zF/kyRGwbOHb
-        lueWS4g8SbrMX55QfBvOMpmjy/zVArSrFqBdtQDt6r8FFMK4/YXgaldYXfMDeO1kcOoA/cnuqhrgxcmF
-        H+0vR9ufpI2LoxogXWZXoVmAw4+ySM/vjF/lNlDbyHTlQiRtklbIgm7YQYMFyPJENIcWP1e2x79BN+qg
-        8a+ALP8K3ZCDhh1Alkk9WtoZtQDtqnkBEdqH7yITAeXFOivo7I25msaWHQP0SvFL58bnjczHzapBtYx/
-        nqcR9UsAz4+6B2BRe7fODCHmCtglqb2995NFVoBlroABBb55mlllBljmCugdUEvV9p5lroCd/dPl9EoT
-        A4pKYqm5X3FYDfXd00usAMtcAdsl9bgfRM3USpkZQsz9Qy3K8Lb8+O0GK8SOHQPsCKnH3IOwSA6erKB6
-        /PrTV9QZVjdphH2J+F7R/yDN7MX1+JluoG5FW6bl7attCB4RQMz4U8urxYMPs2WfBK/T8s4It73L52/O
-        G0v5naN7PY5lTdQuzZhk69DSzigYRPvxRSd6JZIsZvAeYoX/zTOLaygwFjM8I+oZWtZZ4fvtIR/QJknI
-        rSm9MqubWxueBWOZfKKeLBTQVbyH3QB+wU/uFC3XOHUMxU74lcRdn6y9J/9G8smoZnJcC4BExivBPrc8
-        e5iW2Atyub4DTwueJIjAfzUAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ+SURBVFhH7ZfBaxNBFMajiHhWj178IzznoDZts9k0oAe9
+        Ch6LKOKtqwhtmt3tFtSCYC/W6k1BPEgRFoxpdjbaoiRN0DYRrTlUJanNpmlqHOfV2VZ0oia76cSSD77D
+        7JD3/didzJvx7CidlJJ7BRWNCkq06BuKF8QRpMEzOs1ffQSo/07Kmv1QweD+iZQFkHSav+DNAViu+G3D
+        M4sVDG+STvOXLxzfhLMNz+g0f3UAnaoD6FQdQKf6bwGFCGl/YbTcGzFWggq65pX0PfQn26t6gOcn0z/a
+        X562P9kcE0dMBbrMtkKzAIce5XC2sDV+mV/D3mG9dm5izoJWyIJu2UGDBcjyeDSP5z/XNse/QbfqoPGv
+        gCz/Ct2Sg4YTQJahHi3tjjqATtW+gBjvIneR8aD2YpUVdPrGTENj264B+uX4hTNjr0qZj+t1gxoZ//yc
+        RjQvQXl+sEtCZfPdKjMEzBWwVzYGBu4ny6wA21wBQxp68ySzzAywzRXQLxmVemvPNlfAHmmqOrfUxoCi
+        llho708cMcLS3WyFFWCbK+Bx2TgcVHQrtVRlhoC5b9Siim6rj9+usUKc2DXA7rBxCDZrOHiygprx609f
+        cU/EWKcRziWSe8XVB7PMXtyMn2VLuE8zF2l55zo6iA4ISqz0p5bXiKWHuWpARtdpeXdE2t7Fs+TQsFDY
+        Oro341jOwl5Zt2Dp0NLuSJLwbnLRiV66lSxnyBpihf/NT+dXcGg0VvING6doWXdF7rf7Aoo5CSE39XRt
+        OmttLHgWjG3YoqbSRXyFrOFjCvpC3twJWq516h6MHQlqiXsB1XwP/0bYMuoZdoCQksj4ZXS5S53eT0vs
+        BHk83wHdpZ28JoVwWQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="topViewBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -196,17 +190,17 @@
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADnSURBVDhPY8jv7xfInNQeQyxOm1nPxYAMKnpmG0/Yuej/
         gjMr/6+4tB4vXn5p3f/6TVNfoBgCMuDx81f/l5zc+H/rnV3/dz3YixdvvbPzf/36qa9yJ9bzwQ148uL1
         /19/fv+fc3Tl/x3392DViIy33NmBMARmAAh8+fH1f++GRf/n7l1LEE/euux/Uc+UTBQDQODkxetQFn4A
-        0lPeNTtm1ABqGXD7/uN/UHHSDQhdtYp58dqda969/wg2hGQDQADZELIMAIG0mTNZF6zdtX7bwVNgSUL4
-        /LU7qAaAAMgQkCCxuL5+pggAoNIfrsByY7UAAAAASUVORK5CYII=
+        0lPeNTtm1ABqGXDlxp1/UHHSDQhdtYp58dqda56/eAU2hGQDQADZELIMAIG0mTNZF6zdtX7bwVNgSUL4
+        /LU7qAaAAMgQkCCxuL5+pggAY0wfbzfMZ+8AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="frontViewBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADISURBVDhPY6ivn8lV0T3DvKJntjExOG3mTFYGZADSvGTj
-        3v8Pnrz4/+TFa7z49v3H/xat37MZxRCQqSDNe46e+//z16//hMCHj5/+LVi3Y2vuxInscANApv/69Zs8
+        3v8Pnrz4/+TFa7z4yo07/xat37MZxRCQqSDNe46e+//z16//hMDLV6//LVi3Y2vuxInscANApv/69Zs8
         Q2AGgADIkPYd0//PO7GCIO7fN/d/5qT2GBQDQAAkuevBXoJ4xaX1owZQ1QBQCoPqJ92A0FWrmBev3bnm
-        3fuPYENINgAEkA0hywAQAGWQBWt3rQelMJAkITzrxBJUA0AAZAhIkFhc1NMjAgDGT+1vgEFG4AAAAABJ
+        +YtXYENINgAEkA0hywAQAGWQBWt3rQelMJAkITzrxBJUA0AAZAhIkFhc1NMjAgC1FuzxVIuJBQAAAABJ
         RU5ErkJggg==
 </value>
   </data>
@@ -214,20 +208,20 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADfSURBVDhPY8jv7xeo6JltTCxOmzmTlQEZZE5qj5mwc9H/
-        R89f/n/y4jVefPv+43+L1u/ZjGIIyID5Z1b8X3hi7f+ff379JwQ+fPz0b8G6HVtzJ05khxuw4tL6/9vu
+        R89f/n/y4jVefOXGnX+L1u/ZjGIIyID5Z1b8X3hi7f+ff379JwRevnr9b8G6HVtzJ05khxuw4tL6/9vu
         7vo/5+jK/x+/f4YqxQ1QDIEZsOvB3v877u/+37th0f+TF68TxNsOnvpf3jU7BsUAEJ67dy3UHvwAFCaj
         BlDTgOWX1pFvQOiqerb6dTOebL69gzwDQADZELIMAIG0mfVc9RsmP5uydRlYkhA+f+0OqgEgADKkqGdK
-        JkiCGFxfP1MEAGIcH26OIQbLAAAAAElFTkSuQmCC
+        JkiCGFxfP1MEAI5pHy9c6iDVAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripButton8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADZSURBVDhPY6ivny9Q0TPbmFicNnMmKwMyKO+aHbNi64H/
-        j56/+v/kxWu8+Pb9x/8Wrd+zGcUQkAE37j76v/f4+f+/fv/5Twh8+Pjp34J1O7bmTpzIDjcAZPrPX7//
+        j56/+v/kxWu8+MqNO/8Wrd+zGcUQkAE37j76v/f4+f+/fv/5Twi8fPX634J1O7bmTpzIDjcAZPrPX7//
         7z127v+Xb9+hSnEDFENgBoDAn79//wMl/p+8eJ0g3nbw1H+QXhQDQGD97iNQFn4A0jNqADUNePTsFVSY
         DANCV61iW7xux5Ov336AJUg2AASQDSHLABAAZhCueSt2PVu2eS9YkhA+f+0OqgEgADKkrGt2JkiCGFxf
-        P1MEAIvbNr8Qbi8tAAAAAElFTkSuQmCC
+        P1MEALgoNoCku4PTAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="rightViewBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -254,33 +248,78 @@
   <data name="drawBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKrSURBVGhD7ZbPT9NgGMd3ALl7NoR40ZMOMMEhCVO26WjX
-        dUSOJsMgQkJka0ngf8BwXBAuehJYy7vOw8x+lWEWPag3DzNh8sMFFMX4AyNDee1b35KyRLMlxLcN/SRP
-        0rT9Jp+nz/u+qc3CwsLiSNkYGWla47gXpXD4GbrGt81BaWys8S3PL5d4HqJa5bjVzVDoNH5sbKT003Py
-        Q2GuyPP7WgOo1nn+jeEngeSFx/mtWDYPM9F4ojg8/EvfhKEnoZfXKhMFycpJKPUSR4wDJQbOB6WB5yAr
-        v9M3gCotPFosjo4eNLHC8+9xzBggeY/AbtGAhTdi/ctzqcy3yiaSorSEmlCnwXH9OEoevTwq54wbMpFe
-        +CCV/lnZRHpeSq2Hw7dxlDzdwG/X5Cngh53TLnhxskMtKtIDD00ikf8K5CdOHCUPkvcC7wf9l9fkUTln
-        utTlpO6JRP5TLLvUhqPkocVACw18H/8ljyaCnt2MD70Sc7kWHCVPNV9ek6cBXaZiTABHycPEmOZjI08D
-        P4uj5EHy1a55N/DuGkq+lg1rennfAuvHUfKYWp4CbGst8sppw+AoeVR5gd225P839ALroEX289/k0Y+a
-        Xl45bXw4Sh5Tyyv/Nu3HQp6eZX8oRyWNo+RB8u5Z9osp5X1Cz6Va5LvFAIWj5DG1vHLadFQr7wHe78o5
-        78JR8phafkc+eWpA8hSqkVea3FGOyi4cNQb7ckNfWa4r3YpfXjOdPALKJ+7DXAPcXazf6J2y75lKHlHO
-        1a2gBtQm5PrN6/fse5XyPjFwBb9uLKKTZy7I042q/EETyiTQcjK8PGJi3D7luMbAZKTpUBNoTwxKroKh
-        5RGhofbXbVf9UGtCXU5/9kQQnU74NePSF+zcvjPoKEyMN0fm755txbctLCwsjhqb7TcOgc1mEr+j+wAA
-        AABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKtSURBVGhD7ZbdT9NQGId3AXLvtSHEG+VG+TDBIckmzCm0
+        6zoilybDMIQb2VoS+B8wXC44bkyMGljLWacJZl9lmEUv1DuzzITIhwsoivEDI0M59tRTUpZotoR42tAn
+        eZOm7S953r7nnNRmYWFhcaisj4w0rHLci2Io9Axd49vmoDg2Vv+W55eKPA9RrXDcykYweBI/NjZS6ukZ
+        +YEwk+f5Pa0BVGs8/8bwk0DywuPcZiyTg+lofD4fCPzSN2HoSejltUpHQaJ8Ekq9xBHjQIm+s35p8DnI
+        yO/0DaBKCQ8X8qOj+00s8/x7HDMGSN4tsJs0YOG12MDSTDL9rbyJhCgtoibUaXDcAI6SRy+Pyjl9CTLh
+        PhhJpn6WN5GalZJrodANHCVPD/A2afIU8EJHxAXPT3aoRYV74YFJPMp9BfITJ46SB8l3g+4P+i+vyaNy
+        Tnepy0ndE/O5T7HMYhuOkocWfS008Hz8lzyaCHp2PT78SsxmW3CUPJV8eU2eBnSJijE+HCUPE2Oaj4w8
+        DbwsjpIHyVe65h2gc8dQ8tVsWNPLe+ZYL46Sx9TyFGBbq5FXThsGR8mjygvsliX/v6HnWDstsp//Jo9+
+        1PTyymnjwVHymFpe+bdpPxLy9F32h3JU0jhKHiTvus9+MaW8R+i9UI18j+ijcJQ8ppZXTpuOSuXdwP1d
+        OeddOEoeU8tvy8dPDEruQiXyjnvstnJUduGoMdiT6/pLck0xEL+4ajp5BJSP3YHZOrizULveN9W4ayp5
+        RClbs4waUJuQazeu3m7cLZf3iL5O/LqxiE6eOidH6lX5/SaUSaDlZHh5xMR405T9CgMT4YYDTaA9MSS5
+        CoaWRwSH21+3XfZCrQl1Of3ZE350OuHXjEu/37F1c8hemBhvDs/eOt2Kb1tYWFgcNjbbb8h2zD76pCVs
+        AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripButton11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHISURBVDhPlZLdThpBGIbXK+mteAVeRk97UGvSeNBgavyL
-        pQbwpyogi8RtuyLCrrqAi4sgKsqCif8HqNQWLAeNSusifbszxg1kidQveZJJZt7nm/kyTPfQ1Iv3jlnP
-        0MRX1uYOLjpYIemdjxZmApFv9bj9K/n+8TkXw6CNqS8S3lBPkMqeYDmeAS+to76ubypQNnN0PReK/bWM
-        sM4GyeD4Fy8JG4KVBD38WPlCES/fWuk6JG9B3MhVLVbWY0ieKyDnQsls1TLi/WgSSOsqOEHB+WUJhR9X
-        DVx8LyEQTdFzBJs7oJgEZBbx9AGEtTSEWCNL8V19/9gQ2JsJnoNJsKhfL5LMtCS4mkJi99AsUNJ7dFBP
-        1d29BvX0GKKy01xwWwUuK2bOrjV4tkQ4tz/Dp/Kwxzx4x02cmwRaTf84mhlfWoRwKkHKRymRMxkLWbHW
-        5e/vbCko/9bg0jvXh4u3JailHAalsUTLJ+T0P+BT57FTzGC/fEjDB+UjKvsgTx4xfQ7uySHe12pwbnK0
-        81XlpxEm9Er2KNNtdbUPT/PyJ87/iw/LTbHx7B9+P4hwftUIjyozd698PR10kP9Tb/wDr8mbybVJ54cw
-        w/wD5i34ulk0pUgAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHJSURBVDhPlZLdThpBGIa3V+KteAW9DE89qG3SeNDQtBEl
+        LRog/rQCsnTTbV0p4lJZwaXLj4ggK00Ufw7QUhWUg8ZK6yK+3RnjBrJE6pc8ySQz7/PNfBlm2Pa+75Xr
+        g882Pc86vKFFFyum/Quxylww+rMdbyBStk599DAMHjHtRcJr6j4yW/tYThQgSEm018XvBpT1Il3PCZEb
+        ywTr7pCMTX32k7AhiKTo4bsqV6oYeG6n6yU5i8BasWmxsz5D8lABOSekt5qWCf+4SSAlVfCigqPjGiqn
+        Zx38OKkhGMvQcwSHN6iYBGQWidwOxG85iPFOviY29f09Q+DsJngIJsGifr1outCT0GoGqc2SWaDkvtNB
+        3VdX1xrUgz2ElXx3wWUTOG6YObzQ4MuG4d74BE4V4Iz78IKfPjIJtJb+cTQzXC4M8UCCVI5RoocyvmTD
+        rWcB61BPQf2PBo/euT1cvaxBrRUxJk2mej6hqP8BTl1AvlrAdr1Ewzv1XSp7K7/bZUZc/L1DvG614F7n
+        aeezxrkRJryWnDFm2O7pfzMryDO88EtYkbvi4Ni/wnYIK+VVI+yUZ64GuZeP6SD/p54GRp+QN5Nrk863
+        YYb5B1zk+HsEvGkjAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="orbitBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAATeSURBVEhL1VdNbFRVFB41YaGJfzEulEQX/i00RqnQGgJC
+        a8RQ6bQGRRMirWk0amHez7Q1xAwu/I+Uzrz3xinYagibKiG60GDUzrx3ZyxaNEQXin8bUVDTqRaCUnX8
+        vjvHyZvRlmkXRr/kZe4959x77j1/90zkP4mmWzsGlq1c+2tTS3S7kP4dNDRHZ7p7nyg1tXSULM9/13T8
+        exKJ0pnCroA02wvutV01ZnvZn2Ke+g7jHmHPD5YbdEQ7E5O88fI1G1Km60exed721HjcU1eLWMTM5K+x
+        Pf9901XKdlRbX2biPMMpXAG5zzgXsfqBE79FZTIto1Q6w04HD9jJ7DEc7A7TU+s4hoJu8kRKgwe3PPWm
+        TOuH7fpHzczYRTKtQvwF1YCDFWNJNWl5wRIhV8Hy8hfbydw3Mq0f8NPM+tHRs2RaBW12HEwfDrcWchUS
+        o58swsFOyrR+mJ7/Y78XXCDTCnrThaVlhfkb4qncjRzTAsKugNaiG2RaP+yU/7GRKlwnUw1jZ+FCKxV8
+        Tf8KKcIAQiB9VXtIIx1cb3jqkEzrB3y0G37cCiX3w49JbP46UwW04/RtzMv+rj+MwTtuueBRxg0G417Q
+        ZTvBY6ajXpLtTgNGrRe0YINd+KZjaR08IzjEZmz4rOEEh3uGxhfzdsxdfhz37j602HL9zyH7DGW5BvsU
+        Y6nsz1i3k3vWRn0Flptfa3q5jyw39wEEHzYGxxrtlPqWm28ZGDufY8vxl4n430AeLHCEsgxK+r7fzd/E
+        vfSeTvAhDnS7iAO8JcxjprKfojI1C1WDC+KuvxK3f9r0giHS1o8mFnWO9O/YONw3tWmor7hpuG+ANPIo
+        Y7nqqbirVllOcIC0v8Bbax2uGtC3h896QcwlMhNni0wFoMegdC8jPJ5Sl5DWNfzowOY9j59IqqESv549
+        205QOXmUsZPqBxSOfTQ5aWFQB3WBH48wSs2Uf5XwqsDyF0sGJxlcQopsfLF/igozB4b1l1KZEm8u7Ejc
+        UQ7X9AyOnyukKrDc6jSD9u/DtTcM+stAEQgrppK5FMPcbl2KaWr41ree23+O8CqwHGUg6F6tNTXNS4X8
+        HsH4vpFe/Wwa6cKlNDUCca/pBltIC4M64LoAMWVLCqkdhqMOoxrdJjIaoE9YTn4FAyYcXPSpDqx/CC6s
+        edJKB7eEg4vvesPqtpn27m1F+Hh7VWox1BnyqL0HYYUe083fHE4npspc6WR4QWNtOpHGvRqbo3/wXW9c
+        3XpKxGugb48CUk76aSwqIgZeZnTDdLqAbN118DIWDW7Oj+O+9NjlMTf3BWUoyzXw8xR+p2mF5o7uV5au
+        WPdLU0v786JpdsDEumTq8gdX2I7/GjcDbVqXyaT6jZ+UTNDAgwxlERed8yuZIfCRQC5eK1MN3o7pF+4s
+        0Bi04wBf0sRC0ljwIzHbs1huAvyjiIkl4bGwK1jwszhnI8CWJ42WJ5k7Fvf8ViFXYcGNAG8yW+vDZgDP
+        ZVEHHx4CIVcBblpY6wNT76f/ZFoGoh7P30M0IW/KhoBj5PmDVbkJIMjuRCy8IdP6QaXRrsRk46rWU8vX
+        3OWwa0Rev4d+qxBPZ68UsXIJFDrXhNvb2fqx06Khua3S0CM/38Zzd3ftzQgWGZh2A1LonXJDnz3CwiHs
+        +YN/XepO/P8HIpE/AdH8jzvnxk+6AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="selectBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAK5SURBVEhLzZbdT9NQFMCnUaNRY6Ixxnfjq/EP8NEXH/0f
+        5J0Q2LpsuyhqGFvbFSZxdF1bYOggQyciH+E7EkWD0WgMHxENRjR+gEC7AVu59pCDIYoIrCX8kibtOffc
+        X+/tzb117FpcFWI53u4srkCUekKKgI87B4iDckL38WrEQekeDNsPiDMLi7RSSmoeXqklhOzFlL2AGFhc
+        ytLq+D2NCGqzKd+HaftYFQNLIG+4r3kFNWW7fK0YyOZyVLrTppNQ7aOCSGQ/NrOeP8VALmdQOdGuE17t
+        IUQ+iE2tZT0xYBgGrU926ea09xeyiUPY3Dr+JQaM5WVa19KZ9obk5yQcPoIl1rCRGAD53VRfxiMow8X+
+        6FEsy5//iYFl82rqfLxAhNjbQlY8jqX5sRkxAPJk1+CCT1BGXDfVE1i+fTYrXqWt/6kpV8eYG9JJ7GJ7
+        bFUMqz2e6sv6uNgEExJPYTdbZyPxj59ztOfJS9rQ2quH61Iz12+p825/Tc7HSt+vmouNqRBLsJuts554
+        5N3kysg0PUNLglLWWSG6SoLiRRcrniGk8QCW5sdaMSygjoEXS4wZez36fiUWb+7W3Wy0GJtbx6oY9uh4
+        S7fuCykjzoBYFK5PzkJ8cuorJYLyxfLjEsRzmk5ZpVEnlcoD2B7hZPJx0vTnb9MrL8XFEnMuv3gJS6wB
+        xNdCdbqHU8jaPxAPJ5cl23vTIB5+M0ZJlTKAKWtgysU0E4hdxsffuLnbp928koG/E/gM5q6VdgVrzmI6
+        f5ysdA5v/wKmvn/olQGjbu0dXPRxahWm7IXx11woq27QYLXPzM5TDy9qRYHaw5i2l1JBHh//8AkGTSON
+        LRrDRq9gyl7cQalAano4D+LRiY8UXgRT9gJT6+WjWkffkAGr3zydnjnLI8cwbS9eXuZKK9UmZzB6HkO7
+        FYfjF75Q+ZZIp3ZTAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
